Fix spacing in main nav bar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,5 +7,5 @@ h1, h2, h3 {
 }
 
 .header-container {
-    margin-top: 100px;
+    margin-top: 5vh;
 }
